style.css
/* ... */
.card .text{
    font-size: 20px;
    font-weight: 500;
}
.about .skills-content .wrapper .card:hover{
    transform: translateY(-10px);
    /* box-shadow: 0 15px 35px rgba(0,0,0,.5); */
}

/* education & experience */
.about .education-experience{
    display: flex;
    column-gap: 30px;
    color: whitesmoke;
    align-items: flex-start;
    padding-top: 20px;
}
.about .education-experience .left{
    width: 50%;
    /* margin-top: 20px; */
}
.about .education-experience .right{
    width: 50%;
    /* margin-top: 20px; */
    /* padding-left: 40px; */
}
.about .education-experience .education{
    padding: 30px, 15px;
    border-radius: 10px;
    /* background-color: rgb(231, 80, 20); */
    /* border: 1px solid #d4d4e3; */
    width: 100%;
    position: relative;
}
.about .education-experience .timeline .timeline-date .ed-symbol .fa{
    font-size: 18px;
    /* text-decoration: none; */
    border-radius: 50%;
    color: white;
    width: 100%;
    height: 100%;
    border: 8px solid red;
    background-color: red;
}
.about .education-experience .timeline .timeline-date{
    /* position: relative; */
    display: flex;
    flex-wrap: wrap;
}
.about .education-experience .timeline .timeline-date h6{
    font-weight: 400;
    font-size: 15px;
    margin-bottom: 12px;
    text-transform: uppercase;
    padding-left: 16px;
}
.about .education-experience .timeline .timeline-title{
    font-weight: 700;
    font-size: 18px;
    margin-bottom: 5px;
    text-transform: uppercase;
    padding-left: 55px;
}
.about .education-experience .timeline .timeline-major{
    font-weight: 600;
    font-size: 16px;
    margin-bottom: 5px;
    padding-left: 55px;
}
.about .education-experience .timeline .timeline-text{
    font-weight: 500;
    font-size: 16px;
    padding-bottom: 20px;
    line-height: 28px;
    padding-left: 55px;
    margin-bottom: 20px;
}
.about .education-experience .experience{
    padding: 40px, 15px;
    border-radius: 10px;
    /* background-color: rgb(184, 138, 12); */
    /* border: 1px solid #d4d4e3; */
    width: 100%;
    position: relative;
}
.about .education-experience .timeline .timeline-date .ex-symbol .fa{
    font-size: 18px;
    /* text-decoration: none; */
    border-radius: 50%;
    color: white;
    width: 100%;
    height: 100%;
    border: 8px solid red;
    background-color: red;
}

/* projects - section */
.projects{
    background: rgb(36, 35, 35);
}
.projects .carousel .card{
    background: #222;
    border-radius: 6px;
    padding: 25px 35px;
    text-align: center;
    overflow: hidden;
    transition: all 0.3s ease;
}
.projects .carousel .card:hover{
    background: crimson;
}
.projects .carousel .card .box{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    color: whitesmoke;
}
.projects .carousel .card:hover .box{
    transform: scale(1.05);
}
.projects .carousel .card .text{
    font-size: 25px;
    font-weight: 500;
    margin: 10px 0 7px 0;
}
.projects .carousel .card img{
    height: 150px;
    width: 150px;
    object-fit: cover;
    border: 5px solid crimson;
    transition: all 0.3s ease;
}
.projects .carousel .card:hover img{
    border-color: white;
}
.projects .card .box a{
    display: inline-block;
    background: crimson;
    color: #fff;
    font-size: 16px;
    font-weight: 450;
    padding: 5px 15px;
    margin-top: 20px;
    border-radius: 6px;
    border: 2px solid crimson;
    transition: all 0.3s ease;
}
.projects .card .box a:hover{
    color: crimson;
    background: white;
    border: 2px solid white;
}
.owl-dots{
    text-align: center;
    margin-top: 20px;
}
.owl-dot{
    height: 13px;
    width: 13px;
    margin: 0 5px;
    outline: none!important;
    border-radius: 50%;
    border: 2px solid crimson!important;
    /* transition: all 0.3s ease; */
}
.owl-dot.active{
    width: 35px;
    border-radius: 14px;
}
.owl-dot.active,
.owl-dot:hover{
    background: crimson!important;
}

/* contact-section */
.contact{
    background: black;
}
.contact .contact-row{
    display: flex;
    align-items: center;
    text-align: center;
    margin: auto;
    color: whitesmoke;
}
.contact .contact-row .left{
    width: 50%;
    align-self: flex-start;
    padding-left: 70px;
}
.contact .contact-row .right{
    width: 50%;
}
.contact .email,
.contact .location,
.contact .name{
    display: flex;
    margin: auto;
    align-items: center;
    column-gap: 30px;
    padding: 0px 0px 20px 50px;
}
.contact .left .text{
    line-height: 1.6;
    margin-right: 20px;
    padding-top: 5px;
}
.contact .left .text h2{
    font-size: 26px;
    padding-bottom: 20px;
}
.contact .text{
    text-align: left;
}
.contact .contact-row h6{
    font-size: 16px;
}
.contact .bi{
    font-size: 40px;
    color: white;
}
.contact .social-media{
    text-align: left;
    padding-left: 48px;
    padding-top: 10px;
    display: flex;
    column-gap: 20px;
}
.contact .social-media a{
    display: inline-block;
    text-align: center;
    line-height: 45px;
    font-size: 23px;
    width: 50px;
    height: 50px;
    /* margin: 0 4px; */
    text-decoration: none;
    border-radius: 50%;
    color: white;
    fill: currentColor;
    border: 2px solid crimson;
    background-color: crimson;
    transition: all 0.3s ease;
}
.contact .social-media a:hover{
    color: crimson;
    background: none;
}

/* footer section */
footer{
    background: #111;
    padding: 15px 23px;
    color: #fff;
    text-align: center;
}
footer span a{
    color: crimson;
    text-decoration: none;
}
footer span a:hover{
    text-decoration: underline;
}


/* responsive media query start */
@media (max-width: 1104px) {
    .about .about-content .left img{
        height: 350px;
        width: 350px;
    }
}

@media (max-width: 991px) {
    .max-width{
        padding: 0 50px;
    }
}
/* ... */

